--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,8 @@
-body {
-    background: url("../images/green_dust_scratch.png");
-  }
-  .container {
+.container {
     max-width: 90%;
   }
   .header {
-    background-color: #ff6600;
+    background-color: #009900;
     color: white;
     text-align: center;
     margin: 20px;
@@ -15,7 +12,7 @@ body {
     font-size: 40px;
   }
   .instructions {
-    background-color: #ffff99;
+    background-color: #00ffff;
     color: #009900;
     text-align: left;
     margin: 20px;
@@ -66,4 +63,5 @@ body {
     padding: 15px;
     text-align: center;
   }
+  
   
